--- a/signup-api/pom.xml
+++ b/signup-api/pom.xml
@@ -8,14 +8,16 @@
 		<version>2.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>io.dtwo.api</groupId>
 	<artifactId>signup-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>signup-api</name>
-	<description>Demo project for Spring Boot</description>
+	<description>signup-service API</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<mockito.version>2.24.0</mockito.version>
 	</properties>
 
 	<dependencies>
@@ -67,16 +69,19 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.4.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>2.27.0</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- security -->
@@ -93,6 +98,8 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -106,7 +113,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
